tests/typecheck/good/constr1.scilexp
let i1 = Int32 5 in
let i2 = Int32 6 in
let foo = Pair {(Int32) (Int32)} i1 i2 in
foo